# Keystone

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  pyproject.toml  test_interactive.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  anthropic_adapter.py  base.py  deepseek_adapter.py  glm_adapter.py  kimi_adapter.py  lingya_adapter.py  openai_adapter.py  qwen_adapter.py
app/api/: admin.py  anthropic_compatible.py  auth.py  openai_compatible.py  runs.py
app/db/: redis.py  sqlite.py
app/middleware/: auth.py  rate_limit.py
app/models/: __init__.py  request.py  response.py
app/services/: dispatcher.py  (+12 more)
config/: gateway.yaml  models.yaml
docs/: admin-ui.md  api-reference.md  architecture.md  configuration.md  deployment.md  operations.md  provider-setup.md  quickstart.md  requirements.md  troubleshooting.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts
scripts/: auto_test.py  quickstart.sh  setup_admin_token.py  setup_test_key.py
tests/: conftest.py  test_adapters.py  test_anthropic_compatible.py  test_api_auth.py  test_api_runs.py  test_auth_middleware.py  test_compose_config.py  test_config.py  test_dispatcher.py  test_governance.py  test_intent_classifier.py  test_load_balancer.py  test_models.py  test_openai_compatible.py  test_provider_errors.py  test_result_cache.py  test_router.py  test_rule_engine.py
(+13 files in other folders)
